[package]
name = "rust-htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.3"
maud = { git = "https://github.com/lambda-fairy/maud", features = ["axum"] }
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
tracing-subscriber = "0.3.18"
cargo-watch = "8.5.2"
